Clean up some of the code for the installer. Simplify the error message.